--- a/Android App/app/build.gradle
+++ b/Android App/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 android {
+
     namespace 'com.example.bahoot'
     compileSdk 33
 
@@ -32,7 +33,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'mysql:mysql-connector-java:8.0.32'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
