--- a/Android App/app/src/main/AndroidManifest.xml
+++ b/Android App/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Stats"
+            android:exported="false" />
+        <activity
+            android:name=".WaitingScreen"
+            android:exported="false" />
+        <activity
             android:name=".RoomCode"
             android:exported="false" />
         <activity
@@ -33,7 +39,9 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
+
+        <service android:name=".WaitingService" />
 
         <meta-data
             android:name="preloaded_fonts"
